<resources>
    <string name="app_name">Fake Login Tab</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agree_privacy">I have read and agree the Privacy Policy</string>
    <string name="wrong_login">Usuário/senha inválidos, por favor tente novamente.</string>
    <string name="empty_field">Campo vazio</string>
    <string name="signup_sucess_message">Conta cadastrada com sucesso!</string>
    <string name="login">LOG IN</string>
    <string name="signup">SIGN UP</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
</resources>