<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".SignupFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:outlineSpotShadowColor="@color/colorPrimaryDark">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtSignupUsername"
            android:hint="@string/username"
            android:singleLine="true"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/colorMain" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:outlineSpotShadowColor="@color/colorPrimaryDark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtSignupPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/colorMain"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/white"
            android:inputType="textPassword"/>


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:outlineSpotShadowColor="@color/colorPrimaryDark" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtSignupConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/colorMain"
            android:backgroundTint="@color/white"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="30dp"
            android:inputType="textPassword"/>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkPrivacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agree_privacy"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>


    <com.google.android.material.button.MaterialButton
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:textColor="@color/white"
        android:text="@string/signup"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/colorMain"
        android:id="@+id/btnSignup"/>

</LinearLayout>