<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".LoginFragment">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:outlineSpotShadowColor="@color/colorPrimaryDark"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:singleLine="true"
                android:id="@+id/txtLoginUsername"
                android:layout_marginTop="30dp"
                android:textColor="@color/colorPrimaryDark"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/colorMain"
                android:backgroundTint="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:outlineSpotShadowColor="@color/colorPrimaryDark"
            android:layout_marginTop="30dp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtLoginPassword"
                android:hint="@string/password"
                android:textColorHint="@color/colorMain"
                android:backgroundTint="@color/white"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginTop="30dp"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:textColor="@color/white"
            android:text="@string/login"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:backgroundTint="@color/colorMain"
            android:id="@+id/btnLogin"/>



</LinearLayout>